# Analytics-Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  implementation_plan.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-huggingface.yml
backend/: .env.example
backend/app/: main.py
backend/tests/: conftest.py  test_storage.py  test_validators.py
docker/: backend.Dockerfile
docs/: architecture.md  architecture_decision_record.md  deployment.md  development.md  monitoring.md  production_checklist.md  release.md  rollback.md  security-risk-acceptance.md  security.md  testing.md  troubleshooting.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  results.xml  tailwind.config.js  vercel.json  vite.config.ts
frontend/docker/: frontend.Dockerfile
frontend/e2e/: app.spec.ts
frontend/src/: main.ts
frontend/tests/: AnalysisFacade2.spec.ts  AnalysisPolling.spec.ts  ApiClient.spec.ts  Button.spec.ts  CircuitBreaker.spec.ts  DashboardMapper.spec.ts  DashboardQuery.spec.ts  Exceptions.spec.ts  ExtraCoverage.spec.ts  Mapper2.spec.ts  Mappers.spec.ts  Misc.spec.ts  QualityService.spec.ts  QueryCache.spec.ts  (+6 more)
scripts/: check_headers.py  compile_report.py  run_verification.ps1
(+142 files in other folders)
