[tool.poetry]
name = "enterprise-analytics-platform"
version = "1.0.0"
description = "Enterprise Analytics Platform - Phase 2 Backend Foundation"
# TODO: Replace YOUR_NAME and YOUR_EMAIL with your actual name and email
authors = ["MAFU <mafudev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
kneed = "^0.8.5"
sentry-sdk = {extras = ["fastapi"], version = "^2.5.1"}
slowapi = "^0.1.9"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I"]
lint.ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-v --cov=backend/app --cov-report=term-missing"
testpaths = ["backend/tests"]
pythonpath = ["."]
